[project]
name = "mentalhealth"
version = "0.1.0"
description = "mentalhealth using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.40.1",
    "crewai[tools]>=0.114.0,<1.0.0",
    "flask>=3.1.0",
]

[project.scripts]
mentalhealth = "mentalhealth.main:run"
run_crew = "mentalhealth.main:run"
train = "mentalhealth.main:train"
replay = "mentalhealth.main:replay"
test = "mentalhealth.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
